--- a/main.css
+++ b/main.css
@@ -249,9 +249,12 @@ nav {
     z-index: 10;
     width: 90vw;
     height: auto;
+    /* max-height: 100vh; */
     background-color: white;
     margin: 1em;
+    /* padding-top: 50px; */
     bottom: 0;
+    /* top: 300px; */
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
@@ -261,7 +264,7 @@ nav {
     justify-content: center;
     align-items: center;
     /* transform: translate(22px, -22px); */
-
+    /* overflow: scroll; */
 }
 
 .menu button {
@@ -277,34 +280,52 @@ nav {
     padding: 2rem 3rem;
 }
 
-.menu .product, .menu .company {
+/* .menu .product, .menu .company {
     margin-bottom: 2rem;
-}
+} */
 
 .menu p {
     font-family: var(--ubuntu);
     font-weight: 600;
-    font-size: 1.5rem;
-}
-
-.menu img {
-    width: 1rem;
-}
-
-.close-btn {
-    position: absolute;
-    z-index: 10;
-    right: 0;
-    top: -80px;
-}
-
-.close-btn img {
-    width: 2rem;
+    font-size: 1rem;
 }
 
 /* .menu img {
-    width: 2rem;
+    width: 1rem;
 } */
+
+.close-btn {
+    display: block;
+    position: absolute;
+    z-index: 50;
+    right: 0;
+    top: -80px;
+    background-color: rgba(255, 255, 255, 0.493);
+    padding: 1rem;
+    border-radius: 5px;
+}
+
+.close-btn img {
+    display: block;
+    width: 1rem;
+}
+
+
+.menu .main-menu button{
+    background-color: transparent;
+    border: none;
+    font-family: var(--ubuntu);
+    font-weight: 500;
+    padding: 1rem;
+    display: block;
+}
+
+.accordion-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .menu .menu-cta a {
     display: block;
@@ -316,7 +337,7 @@ nav {
     border-top: solid 1px var(--very-dark-desaturated-blue);
     font-family: var(--ubuntu);
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: var(--body-copy);
     display: flex;
     flex-direction: column;
@@ -327,7 +348,7 @@ nav {
 .menu .menu-cta .burger-login {
     font-family: var(--ubuntu);
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: var(--body-copy);
     padding: 1rem 3rem;
     border-radius: 100px;
@@ -337,7 +358,7 @@ nav {
 .menu .menu-cta .burger-signup {
     font-family: var(--ubuntu);
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: white;
     background: linear-gradient(to right,
     var(--very-light-red),
@@ -346,4 +367,34 @@ nav {
 
     padding: 1rem 3rem;
     border-radius: 100px;
+}
+
+.panel {
+    width: 100%;
+    border-radius: 10px;
+    background-color: var(--footer-text);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.panel a {
+    color: var(--very-dark-grey-blue);
+    font-family: var(--ubuntu);
+    padding: 1rem;
+}
+
+
+.product-panel {
+    display: none;
+}
+
+.company-panel {
+    display: none;
+}
+
+.connect-panel {
+    display: none;
 }
