--- a/main.css
+++ b/main.css
@@ -250,7 +250,7 @@ nav {
     width: 90vw;
     height: auto;
     /* max-height: 100vh; */
-    background-color: white;
+    background-color: lightblue;
     margin: 1em;
     /* padding-top: 50px; */
     bottom: 0;
