--- a/main.css
+++ b/main.css
@@ -246,11 +246,11 @@ nav {
 
 .menu {
     position: absolute;
-    z-index: 10;
+    z-index: 101;
     width: 90vw;
     height: auto;
     /* max-height: 100vh; */
-    background-color: lightblue;
+    background-color: white;
     margin: 1em;
     /* padding-top: 50px; */
     bottom: 0;
