--- a/main.css
+++ b/main.css
@@ -50,6 +50,10 @@ h1 {
     color: var(--headings);
 }
 
+p {
+    color: var(--body-copy);
+}
+
 a {
     text-decoration: none;
 }
@@ -209,6 +213,9 @@ nav {
     margin-bottom: .5em;
     color: white;
 }
+.intro p {
+    color: white;
+}
 
 .intro-btn {
     font-weight: 700;
@@ -245,12 +252,12 @@ nav {
 }
 
 .menu {
-    position: absolute;
+    position: fixed;
     z-index: 101;
     width: 90vw;
     height: auto;
     /* max-height: 100vh; */
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     margin: 1em;
     /* padding-top: 50px; */
     bottom: 0;
@@ -277,7 +284,10 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2rem 3rem;
+    padding: 2rem 0;
+    width: 100%;
+
+    /* border: 1px dotted purple; */
 }
 
 /* .menu .product, .menu .company {
@@ -317,8 +327,7 @@ nav {
     font-family: var(--ubuntu);
     font-weight: 500;
     padding: 1rem;
-    display: inline-block;
-    width: 100%
+    display: block;
 }
 
 .accordion-btn {
@@ -374,7 +383,7 @@ nav {
     width: 100%;
     border-radius: 10px;
     background-color: var(--footer-text);
-    padding: 1rem;
+    padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -398,4 +407,105 @@ nav {
 
 .connect-panel {
     display: none;
+}
+
+.design {
+    width: 100%;
+    /* border: 1px dotted purple; */
+    display: grid;
+}
+
+
+.smartphone {
+    width: 100%;
+    height: 400px;
+    /* margin-top: 14.5em; */
+    /* border: 1px dotted purple; */
+}
+
+.smartphone .descriptions h1 {
+    color: white;
+    margin-bottom: 1em;
+}
+
+.smartphone .descriptions p {
+    color: white;
+    line-height: 1.6;
+}
+.smartphone .illo, .smartphone .descriptions {
+    position: relative;
+    z-index: 100;
+}
+
+.smartphone-bg {
+    position: absolute;
+    width: 100%;
+    height: 400px;
+    border-bottom-left-radius: 100px;
+    border-top-right-radius: 100px;
+    overflow: hidden;
+
+    display: flex;
+    align-items: center;
+
+
+    background: linear-gradient(to right,
+    var(--very-dark-grey-blue),
+    var(--very-dark-desaturated-blue)
+    );
+}
+
+.smartphone-bg img {
+    position: absolute;
+    left: -150px;
+    top: -10%;
+    transform: translateY(-50%);
+}
+
+.smartphone-content {
+    position: absolute;
+    width: 100%;
+    height: 400px;
+    border-bottom-left-radius: 100px;
+    border-top-right-radius: 100px;
+    
+    display: grid;
+
+    color: rgba(255, 255, 255, 0.698);
+}
+
+.smartphone-content .illo {
+    /* width: 50%; */
+    transform: translateY(30px);
+}
+
+.laptop {
+    display: grid;
+}
+
+
+footer {
+    background-color: var(--footer-bg);
+    color: var(--footer-text);
+    display: grid;
+    border-top-right-radius: 100px;
+    display: flex;
+}
+
+footer h1 {
+    color: white;
+    margin-bottom: 1em;
+}
+
+footer ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer li {
+    list-style-type: none;
+    padding: 0;
+    margin: .5em 0;
 }
