--- a/query.css
+++ b/query.css
@@ -62,6 +62,8 @@
         justify-content: center;
         /* border: 1px dotted red; */
         margin: 2em 0;
+
+        animation: image-pulse 2s infinite ;
     }
 
     .design-text {
@@ -109,6 +111,7 @@
         width: 300px;
         top: -55%;
         margin: 0 auto;
+        animation: image-pulse 2s infinite ;
     }
 
     .smartphone .descriptions {
@@ -137,7 +140,7 @@
         background-repeat: no-repeat;
         /* border: dotted 1px red; */
         margin: 2em 0;
-
+        animation: image-pulse 2s infinite ;
     }
 
     .laptop-text {
