--- a/main.css
+++ b/main.css
@@ -29,15 +29,16 @@
     --overpass: 'Overpass';
     --ubuntu:'Ubuntu';
 
-    --padding-page: 0 10rem;
+    --padding-page: 0 4rem;
 }
+
 
 @keyframes image-pulse {
     0% {
         transform: translateY(0%);
     }
     50% {
-        transform: translateY(10%);
+        transform: translateY(5%);
     }
     100% {
         transform: translateY(0%);
@@ -213,6 +214,8 @@ nav {
 
 .intro img {
     position: absolute;
+    /* width: 400%; */
+    left: -500px;
 }
 
 .intro h1, .intro p, .intro div {
@@ -427,15 +430,80 @@ nav {
 }
 
 .design {
+    height: 700px;
     width: 100%;
     /* border: 1px dotted purple; */
-    display: grid;
+    /* display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: 20% auto;
+    grid-template-areas: 
+    "title title"
+    "text image"
+    ; */
+    padding: var(--padding-page);
+    overflow: hidden;
+}
+
+.design-title {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    transform: translateX(-64px);
+    /* border: 1px dotted rgb(231, 10, 10); */
+    text-align: center;
+    grid-area: title;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.design-text {
+    /* border: 1px dotted rgb(231, 10, 10); */
+    width: 70%;
+    position: relative;
+    transform: translate(30px, 60px);
+}
+
+ .design-text h1 {
+    margin-bottom: .5em;
+}
+
+.design-text p {
+    line-height: 1.4;
+}
+
+.design-text .text1 {
+    margin-bottom: 2em;
+
 }
 
 
+.design-image {
+    position: relative;
+    right: -130px;
+    top: 60px;
+
+    width: 100%;
+    height: 600px;
+    background-image: url(images/illustration-editor-mobile.svg);
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: right; 
+    /* border: 1px dotted red; */
+    order: 2;
+
+    /* animation: image-pulse 2s infinite ; */
+}
+
+.design-descript {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .smartphone {
     width: 100%;
-    height: 400px;
+    height: 300px; 
     /* margin-top: 14.5em; */
     /* border: 1px dotted purple; */
 }
@@ -457,7 +525,7 @@ nav {
 .smartphone-bg {
     position: absolute;
     width: 100%;
-    height: 400px;
+    height: 300px;
     border-bottom-left-radius: 100px;
     border-top-right-radius: 100px;
     overflow: hidden;
@@ -473,40 +541,88 @@ nav {
 }
 
 .smartphone-bg img {
-    position: absolute;
-    left: -150px;
-    top: -10%;
-    transform: translateY(-50%);
+        width: 950px;
+        position: absolute;
+        left: -16%;
+        top: -100%;
+        transform: translateY(-25%);
 }
 
 .smartphone-content {
     position: absolute;
     width: 100%;
-    height: 400px;
+    height: 300px;
+    padding: var(--padding-page);
     border-bottom-left-radius: 100px;
     border-top-right-radius: 100px;
     
-    display: grid;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: rgba(255, 255, 255, 0.698);
 }
 
 .smartphone-content .illo {
-    /* width: 50%; */
-    transform: translateY(30px);
+    width: 400px;
+    transform: translateY(15px);
+}
+
+.smartphone .descriptions {
+    /* border: 1px dotted white; */
+    /* position: relative; */
+    width: 50%;
+    line-height: 1.4;
 }
 
 .laptop {
     display: grid;
+    grid-template-columns: 40% auto;
+    grid-template-areas:
+        "illo text"
+        ;
+        width: 100%;
+        height: 800px;
+        padding: var(--padding-page);
 }
 
+.laptop-illo {
+    grid-area: illo;
+    width: 800px;
+    /* height: 650px; */
+    background-image: url(images/illustration-laptop-desktop.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* border: dotted 1px red; */
+
+    position: relative;
+    left: -300px;
+}
+
+.laptop-text {
+        /* border: dotted 1px red; */
+        align-self: center;
+        width: 600px;
+
+}
+
+.laptop-text .text1 {
+    margin-bottom: 2em;
+}
+
+.laptop h1 {
+    margin-bottom: .5em;
+}
 
 footer {
+    width: 100%;
     background-color: var(--footer-bg);
     color: var(--footer-text);
-    display: grid;
     border-top-right-radius: 100px;
     display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 4rem;
 }
 
 footer h1 {
@@ -530,4 +646,27 @@ footer li {
 .attribution a {
     font-family: var(--ubuntu);
     color: var(--light-red);
+    margin-left: 5px;
+}
+
+.footer-menu {
+    width: 600px;
+    /* border: solid 1px yellow; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.who {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.frontend {
+    padding: 1rem 0;
+}
+
+footer .attribution img {
+    margin-right: 1em;
 }
