--- a/query.css
+++ b/query.css
@@ -42,37 +42,45 @@
     }
 
     .design {
+        overflow: unset;
+        height: fit-content;
         padding: 0 30px;
         padding-top: 4rem;
-        grid-template-areas: 
-        "title title"
-        "image image"
-        "text text";
-        margin-bottom: 13em;
+        margin-bottom: 10em;
     }
 
     .design-title {
-        grid-area: title;
+        width: 100%;
+        height: 70px;
+        position: unset;
+        transform: unset;
+        /* border: 1px dotted rgb(231, 10, 10); */
         text-align: center;
+        grid-area: title;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .design-image {
+        position: unset;
+        right: unset;
+        top: unset;
+
         width: 100%;
         height: 300px;
         background-image: url(images/illustration-editor-mobile.svg);
-        background-size: contain;
+        background-size:contain;
         background-repeat: no-repeat;
-        grid-area: image;
-        display: flex;
-        justify-content: center;
+        background-position: right; 
         /* border: 1px dotted red; */
-        margin: 2em 0;
-
+        order: unset;
         animation: image-pulse 2s infinite ;
     }
 
     .design-text {
-        grid-area: text;
+        transform: unset;
+        transform: translateY(20px);
     }
 
     .design-text h1, .design-text p {
@@ -86,6 +94,10 @@
 
     .design-text .text1 {
         margin-bottom: 3rem;
+    }
+
+    .design-descript {
+        flex-direction: column;
     }
 
     .smartphone {
@@ -109,12 +121,12 @@
 
     .smartphone-content {
         padding: 0 30px;
-
+        flex-direction: column;
     }
 
-    .smartphone-content img {
+    .smartphone-content .illo {
         width: 300px;
-        top: -55%;
+        /* top: -55%; */
         margin: 0 auto;
         animation: image-pulse 2s infinite ;
     }
@@ -122,12 +134,14 @@
     .smartphone .descriptions {
         /* border: 1px dotted white; */
         /* position: relative; */
-        transform: translateY(-50%);
+        width: 100%;
+        transform: translateY(40%);
         text-align: center;
         line-height: 1.4;
     }
 
     .laptop {
+        height: unset;
         grid-template-areas:
         "illo illo"
         "text text"
@@ -146,9 +160,12 @@
         /* border: dotted 1px red; */
         margin: 2em 0;
         animation: image-pulse 2s infinite ;
+        position: unset;
+        left: unset;
     }
 
     .laptop-text {
+        width: 100%;
         grid-area: text;
         padding:0 30px;
     }
@@ -179,6 +196,20 @@
 
     footer .attribution img {
         margin-bottom: 1em;
+        margin-right: unset;
+    }
+
+    .frontend {
+        padding: unset;
+    }
+
+    .footer-menu {
+        width: unset;
+        /* border: solid 1px yellow; */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
     }
 
     .product-footer, .company-footer, .connect-footer {
