--- a/under-construction.css
+++ b/under-construction.css
@@ -85,20 +85,22 @@ a {
 }
 
 .illo {
-    height: 300px;
+    /* height: 350px; */
     width: 100%;
-    background-image: url(images/2271.jpg);
-    background-size: contain;
-    background-repeat:round;
-    background-color: rgb(230, 239, 241);
     border-radius: 25px;
     position: relative;
+}
+
+.illo img {
+    width: 100%;
+    border-radius: 25px;
+    /* height: 300px; */
 }
 
 .illo a {
     font-size: .8rem;
     position: absolute;
-    bottom: 3px;
+    bottom: 5px;
     right: 1rem;
     background-color: unset;
     padding: unset;
@@ -155,9 +157,13 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
+
+    .cta-btn {
+        position: absolute;
+        bottom: 50px;
+    }
     .illo {
-        background-size: cover;
-        background-repeat: no-repeat;
+        margin-bottom: 1rem;
     }
 }
 
@@ -170,10 +176,19 @@ a {
     }
 
     .illo {
-        height: 200px;
-        background-size: cover;
-        background-repeat: no-repeat;
+        /* height: 200px; */
         margin-bottom: 3em;
+    }
+
+    .illo a {
+        color: var(--very-dark-desaturated-blue);
+        font-size: .8rem;
+        position: absolute;
+        bottom: -20px;
+        right: 0;
+        left: 0;
+        background-color: unset;
+        padding: unset;
     }
 
     .cta-btn {
