--- a/under-construction.css
+++ b/under-construction.css
@@ -179,6 +179,11 @@ a {
         /* height: 200px; */
         margin-bottom: 3em;
     }
+    
+    .illo img {
+        border-radius: 10px;
+        /* height: 300px; */
+    }
 
     .illo a {
         color: var(--very-dark-desaturated-blue);
